[gd_scene load_steps=4 format=3 uid="uid://bks6nooukhpn7"]

[ext_resource type="Script" path="res://scripts/colors.gd" id="1_kyyrm"]
[ext_resource type="Shader" path="res://shaders/color_rect_border.gdshader" id="2_njox7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oxr1m"]
shader = ExtResource("2_njox7")
shader_parameter/border_color = Color(0, 0, 0, 1)
shader_parameter/border_percentage = 0.155
shader_parameter/sprite_size = Vector2(50, 25)

[node name="PumpkinColors" type="VBoxContainer"]
script = ExtResource("1_kyyrm")
colors_count = 20

[node name="ColorsContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="ColorsContainer"]
layout_mode = 2
text = "Base Colors:"

[node name="ColorRect" type="ColorRect" parent="ColorsContainer"]
visible = false
material = SubResource("ShaderMaterial_oxr1m")
custom_minimum_size = Vector2(50, 25)
layout_mode = 2

[node name="HBoxPicker" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ColorPicker" type="ColorPicker" parent="HBoxPicker"]
layout_mode = 2
mouse_filter = 0
theme_type_variation = &"ColorPickerMinimal"
alignment = 2
edit_alpha = false
picker_shape = 1
can_add_swatches = false
color_modes_visible = false
sliders_visible = false
presets_visible = false

[node name="ColorApply" type="Button" parent="HBoxPicker"]
layout_mode = 2
text = "APPLY"

[connection signal="button_down" from="HBoxPicker/ColorApply" to="." method="_on_color_apply_button_down"]
